--- a/src/App.css
+++ b/src/App.css
@@ -1,40 +1,134 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
+
+.ryu-app {
   text-align: center;
+  font-family: Roboto Mono,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.ryu-trigger {
+  display: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.ryu-modal {
+  width: 605px;
+  position: absolute;
+  top: 80px;
+  left: 50%;
+  right: auto;
+  bottom: auto;
+  border: 0px none;
+  background: rgb(48, 51, 56);
+  overflow: hidden;
+  border-radius: 4px;
+  outline: none;
+  padding: 10px;
+  box-shadow: rgb(0, 0, 0) 0px 2px 4px 0px;
+  margin-right: -50%;
+  transform: translate(-50%, 0px);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 150px;
-  min-width: 150px;
-  padding: 30px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.ryu-overlay {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 9999;
 }
 
-.App-link {
-  color: #61dafb;
+.ryu-header {
+  color: #d7dae0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ryu-content {
+  box-shadow: rgb(0, 0, 0) 0px 2px 4px 0px;
+  position: absolute;
+  top: 80px;
+  left: 50%;
+  right: auto;
+  bottom: auto;
+  margin-right: -50%;
+  transform: translate(-50%, 0);
+  border: 0px none;
+  background: rgb(48, 51, 56);
+  overflow: hidden;
+  -webkit-overflow-scrolling: touch;
+  border-radius: 4px;
+  outline: none;
+  padding: 10px;
+  min-width: 600px;
+}
+
+.ryu-container {
+  font-family: Roboto Mono,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+  font-weight: lighter;
+  font-size: 12px;
+}
+
+.ryu-containerOpen {}
+
+.ryu-input {
+  font-size: 14px;
+  border-radius: 4px;
+  border: 2px solid #181a1f;
+  width: 590px;
+  padding: 6px;
+  outline: none;
+  background-color: #202634;
+  color: #d7dae0;
+  caret-color: #568af2;
+}
+
+.ryu-inputOpen {}
+
+.ryu-inputFocused {
+  border: 2px solid #568af2;
+  background-color: #1b1d23;
+}
+
+.ryu-suggestionsContainer {}
+
+.ryu-suggestionsContainerOpen {
+  overflow: hidden;
+  border-top: 1px solid #111;
+  border-bottom: 1px solid #111;
+  max-height: 315px;
+  margin-top: 10px
+}
+
+.ryu-suggestionsList {
+  list-style: none;
+  padding: 0;
+  margin-bottom: 0;
+  margin-top: 0
+}
+
+.ryu-suggestion {
+  color: #9da5b4;
+  border: 1px solid #181a1f;
+  border-top: 0px none;
+  background-color: #2c313a;
+  padding: 14px 12px;
+  cursor: pointer;
+}
+
+.ryu-suggestion b {
+  color: #598cef;
+  font-weight: bold;
+}
+
+.ryu-suggestionFirst {
+}
+
+.ryu-suggestionHighlighted {
+  color: #ffffff;
+  background-color: #3a3f4b
+}
+
+.ryu-spinner {
+  border-top: 0.4em solid rgba(255, 255, 255, 0.2);
+  border-right: 0.4em solid rgba(255, 255, 255, 0.2);
+  border-bottom: 0.4em solid rgba(255, 255, 255, 0.2);
+  border-left: 0.4em solid rgb(255, 255, 255);
 }
