--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,7 @@
 .ryu-containerOpen {}
 
 .ryu-input {
+  font-family: Roboto Mono,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
   font-size: 14px;
   border-radius: 4px;
   border: 2px solid #181a1f;
